syntax = "proto3";

package ai.lzy.v1.iam;

import "ai/lzy/v1/iam/iam.proto";

option java_outer_classname = "LACS";
option java_package = "ai.lzy.v1.iam";

service LzyAccessService {
  rpc Authorize (AuthorizeRequest) returns (iam.Subject);
}

message AuthorizeRequest {
  iam.Subject subject = 1;
  string permission = 2;
  iam.Resource resource = 3;
}
